chore: updated deps
